[gd_scene load_steps=7 format=3 uid="uid://bpcybk1quydvn"]

[ext_resource type="Texture2D" uid="uid://c6atcd7u16t5c" path="res://Textures/PMA.png" id="1_wgrir"]
[ext_resource type="Script" path="res://Scripts/PMA.gd" id="2_ra2bo"]
[ext_resource type="Texture2D" uid="uid://b0ain611op15o" path="res://Textures/SnapBall.png" id="3_ermoa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc6rc"]
size = Vector2(32, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ii5en"]
size = Vector2(23, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iceh4"]
size = Vector2(1.7519, 0.198649)

[node name="PMA" type="Node2D"]

[node name="StationModule" type="Sprite2D" parent="."]
texture = ExtResource("1_wgrir")
script = ExtResource("2_ra2bo")

[node name="damagedTimer" type="Timer" parent="StationModule"]

[node name="CollisionHolder" type="Area2D" parent="."]
position = Vector2(-2, 9)

[node name="hitBox" type="CollisionShape2D" parent="CollisionHolder"]
shape = SubResource("RectangleShape2D_kc6rc")

[node name="DockRight" type="Area2D" parent="."]
position = Vector2(19, 11)
collision_layer = 4
collision_mask = 4

[node name="DockBox" type="CollisionShape2D" parent="DockRight"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ii5en")
debug_color = Color(0.170163, 0.64375, 1.92523e-07, 0.42)

[node name="SnapBall" type="TextureRect" parent="DockRight"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 28.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ermoa")

[node name="ConnectLeft" type="Area2D" parent="."]
position = Vector2(-22.744, -1.29783)
collision_layer = 2
collision_mask = 2

[node name="ConnectBox" type="CollisionShape2D" parent="ConnectLeft"]
position = Vector2(-0.049, 0)
shape = SubResource("RectangleShape2D_iceh4")
debug_color = Color(0.951077, 9.62615e-08, 0.565447, 0.42)

[node name="SnapBall" type="TextureRect" parent="ConnectLeft"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.875
offset_top = -8.0
offset_right = 24.125
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ermoa")
stretch_mode = 2

[connection signal="area_entered" from="DockRight" to="StationModule" method="_on_dock_right_area_entered"]
[connection signal="area_entered" from="ConnectLeft" to="StationModule" method="_on_connect_left_area_entered"]
